@@ -51,15 +51,18 @@ sub index :Path :Args(0) :MyAction('AddDefaults') {
 
     my $logs = $c->{'live'}->selectall_arrayref($query, { Slice => 1, AddPeer => 1});
 
-    if(!$oldestfirst) {
-        @{$logs} = reverse @{$logs};
+    my $order = "DESC";
+    if($oldestfirst) {
+        $order = "ASC";
     }
+    my $sortedlogs = Thruk::Helper->sort($c, $logs, 'time', $order);
 
-    $c->stash->{logs}             = $logs;
+    $c->stash->{logs}             = $sortedlogs;
     $c->stash->{archive}          = $archive;
     $c->stash->{start}            = $start;
     $c->stash->{end}              = $end;
     $c->stash->{endname}          = $endname;
+    $c->stash->{oldestfirst}      = $oldestfirst;
     $c->stash->{title}            = 'Log File';
     $c->stash->{infoBoxTitle}     = 'Event Log';
     $c->stash->{page}             = 'showlog';
